{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 303,
  "lineage": "f4957f6c-6cdd-618f-4177-d3cb8282ccaa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e83ef178242f021",
            "arn": "arn:aws:ec2:us-east-1:823546862766:elastic-ip/eipalloc-05e83ef178242f021",
            "domain": "vpc",
            "id": "eipalloc-05e83ef178242f021",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-88-120-217.compute-1.amazonaws.com",
            "public_ip": "98.88.120.217",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0367c4a8d4ee69761",
            "arn": "arn:aws:ec2:us-east-1:823546862766:elastic-ip/eipalloc-0367c4a8d4ee69761",
            "domain": "vpc",
            "id": "eipalloc-0367c4a8d4ee69761",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-170-217-172.compute-1.amazonaws.com",
            "public_ip": "35.170.217.172",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f00d706c4a80fd93",
            "arn": "arn:aws:ec2:us-east-1:823546862766:instance/i-0abb0512139aa27bd",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0abb0512139aa27bd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "project-hydra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b08def6318557bb8"
              }
            ],
            "primary_network_interface_id": "eni-0b08def6318557bb8",
            "private_dns": "ip-10-0-50-87.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.50.87",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0692660f1fa2b434c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-083ec96c47337e917",
            "tags": {
              "Name": "App-Node-1"
            },
            "tags_all": {
              "Name": "App-Node-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09525a89aeb4a316d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "823546862766",
            "id": "i-0abb0512139aa27bd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.kp",
            "aws_security_group.alb_sg",
            "aws_security_group.app_sg",
            "aws_subnet.private_app",
            "aws_vpc.hydra_vpc",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available",
            "tls_private_key.pk"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f00d706c4a80fd93",
            "arn": "arn:aws:ec2:us-east-1:823546862766:instance/i-02026f1c31db3a05f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02026f1c31db3a05f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "project-hydra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-01ae31c3ba5b5b23a"
              }
            ],
            "primary_network_interface_id": "eni-01ae31c3ba5b5b23a",
            "private_dns": "ip-10-0-51-162.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.51.162",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05ae429170497cd11",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c65a2c9c7b774cab",
            "tags": {
              "Name": "App-Node-2"
            },
            "tags_all": {
              "Name": "App-Node-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09525a89aeb4a316d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "823546862766",
            "id": "i-02026f1c31db3a05f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.kp",
            "aws_security_group.alb_sg",
            "aws_security_group.app_sg",
            "aws_subnet.private_app",
            "aws_vpc.hydra_vpc",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available",
            "tls_private_key.pk"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f00d706c4a80fd93",
            "arn": "arn:aws:ec2:us-east-1:823546862766:instance/i-0c746d26bc7c0f420",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c746d26bc7c0f420",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "project-hydra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0fa83382e08c553ad"
              }
            ],
            "primary_network_interface_id": "eni-0fa83382e08c553ad",
            "private_dns": "ip-10-0-50-32.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.50.32",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-069a26a5c5365bc4b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-083ec96c47337e917",
            "tags": {
              "Name": "App-Node-3"
            },
            "tags_all": {
              "Name": "App-Node-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09525a89aeb4a316d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "823546862766",
            "id": "i-0c746d26bc7c0f420",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.kp",
            "aws_security_group.alb_sg",
            "aws_security_group.app_sg",
            "aws_subnet.private_app",
            "aws_vpc.hydra_vpc",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available",
            "tls_private_key.pk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kafka_brokers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f00d706c4a80fd93",
            "arn": "arn:aws:ec2:us-east-1:823546862766:instance/i-0e59c331e9370c15a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e59c331e9370c15a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "project-hydra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07193c2ee3e55793f"
              }
            ],
            "primary_network_interface_id": "eni-07193c2ee3e55793f",
            "private_dns": "ip-10-0-70-153.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.70.153",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a7ce1d649250dcba",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01123c3a4441bd696",
            "tags": {
              "Name": "Kafka-Broker-1"
            },
            "tags_all": {
              "Name": "Kafka-Broker-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e10eaa75fc5c07f0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "823546862766",
            "id": "i-0e59c331e9370c15a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.kp",
            "aws_security_group.alb_sg",
            "aws_security_group.app_sg",
            "aws_security_group.kafka_sg",
            "aws_subnet.kafka_cluster",
            "aws_vpc.hydra_vpc",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available",
            "tls_private_key.pk"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f00d706c4a80fd93",
            "arn": "arn:aws:ec2:us-east-1:823546862766:instance/i-0b6f6d65e37e78c69",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b6f6d65e37e78c69",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "project-hydra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f76c96deb075b015"
              }
            ],
            "primary_network_interface_id": "eni-0f76c96deb075b015",
            "private_dns": "ip-10-0-71-117.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.71.117",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-064a432603f9d3aee",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a8d396799b5bb90d",
            "tags": {
              "Name": "Kafka-Broker-2"
            },
            "tags_all": {
              "Name": "Kafka-Broker-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e10eaa75fc5c07f0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "823546862766",
            "id": "i-0b6f6d65e37e78c69",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.kp",
            "aws_security_group.alb_sg",
            "aws_security_group.app_sg",
            "aws_security_group.kafka_sg",
            "aws_subnet.kafka_cluster",
            "aws_vpc.hydra_vpc",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available",
            "tls_private_key.pk"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f00d706c4a80fd93",
            "arn": "arn:aws:ec2:us-east-1:823546862766:instance/i-0c9d41edd8f0c6027",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c9d41edd8f0c6027",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "project-hydra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02e27d99f1be6d842"
              }
            ],
            "primary_network_interface_id": "eni-02e27d99f1be6d842",
            "private_dns": "ip-10-0-70-231.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.70.231",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07901fcbab83e88d4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01123c3a4441bd696",
            "tags": {
              "Name": "Kafka-Broker-3"
            },
            "tags_all": {
              "Name": "Kafka-Broker-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e10eaa75fc5c07f0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "823546862766",
            "id": "i-0c9d41edd8f0c6027",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.kp",
            "aws_security_group.alb_sg",
            "aws_security_group.app_sg",
            "aws_security_group.kafka_sg",
            "aws_subnet.kafka_cluster",
            "aws_vpc.hydra_vpc",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available",
            "tls_private_key.pk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "zookeeper_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f00d706c4a80fd93",
            "arn": "arn:aws:ec2:us-east-1:823546862766:instance/i-0a0702f09497cc110",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a0702f09497cc110",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "project-hydra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-009b19364a0e51a6a"
              }
            ],
            "primary_network_interface_id": "eni-009b19364a0e51a6a",
            "private_dns": "ip-10-0-70-45.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.70.45",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d8a4bebd7ac98c14",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01123c3a4441bd696",
            "tags": {
              "Name": "Zookeeper-1"
            },
            "tags_all": {
              "Name": "Zookeeper-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e10eaa75fc5c07f0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "823546862766",
            "id": "i-0a0702f09497cc110",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.kp",
            "aws_security_group.alb_sg",
            "aws_security_group.app_sg",
            "aws_security_group.kafka_sg",
            "aws_subnet.kafka_cluster",
            "aws_vpc.hydra_vpc",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available",
            "tls_private_key.pk"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f00d706c4a80fd93",
            "arn": "arn:aws:ec2:us-east-1:823546862766:instance/i-05aeea38e1c0f5722",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05aeea38e1c0f5722",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "project-hydra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0363bc5c263c03d62"
              }
            ],
            "primary_network_interface_id": "eni-0363bc5c263c03d62",
            "private_dns": "ip-10-0-71-106.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.71.106",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b2004c554c32cc4a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a8d396799b5bb90d",
            "tags": {
              "Name": "Zookeeper-2"
            },
            "tags_all": {
              "Name": "Zookeeper-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e10eaa75fc5c07f0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "823546862766",
            "id": "i-05aeea38e1c0f5722",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.kp",
            "aws_security_group.alb_sg",
            "aws_security_group.app_sg",
            "aws_security_group.kafka_sg",
            "aws_subnet.kafka_cluster",
            "aws_vpc.hydra_vpc",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available",
            "tls_private_key.pk"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f00d706c4a80fd93",
            "arn": "arn:aws:ec2:us-east-1:823546862766:instance/i-045c60189b7a28285",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-045c60189b7a28285",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "project-hydra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-032dd5b082676f349"
              }
            ],
            "primary_network_interface_id": "eni-032dd5b082676f349",
            "private_dns": "ip-10-0-70-71.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.70.71",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-057459d61af1090f1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01123c3a4441bd696",
            "tags": {
              "Name": "Zookeeper-3"
            },
            "tags_all": {
              "Name": "Zookeeper-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e10eaa75fc5c07f0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "823546862766",
            "id": "i-045c60189b7a28285",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.kp",
            "aws_security_group.alb_sg",
            "aws_security_group.app_sg",
            "aws_security_group.kafka_sg",
            "aws_subnet.kafka_cluster",
            "aws_vpc.hydra_vpc",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available",
            "tls_private_key.pk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823546862766:internet-gateway/igw-05ffc29274cc6508a",
            "id": "igw-05ffc29274cc6508a",
            "owner_id": "823546862766",
            "region": "us-east-1",
            "tags": {
              "Name": "Project-Hydra-IGW"
            },
            "tags_all": {
              "Name": "Project-Hydra-IGW"
            },
            "vpc_id": "vpc-056fe79ae0e44e40d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.hydra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:823546862766:loadbalancer/app/hydra-public-alb/2f3d676a78693f43",
            "arn_suffix": "app/hydra-public-alb/2f3d676a78693f43",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "hydra-public-alb-2142218252.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:823546862766:loadbalancer/app/hydra-public-alb/2f3d676a78693f43",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "hydra-public-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0a426cb847f1cecce"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-015855f783b40cfd2"
              },
              {
                "subnet_id": "subnet-0ca9c3c64673fe3bf"
              }
            ],
            "subnets": [
              "subnet-015855f783b40cfd2",
              "subnet-0ca9c3c64673fe3bf"
            ],
            "vpc_id": "vpc-056fe79ae0e44e40d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:823546862766:loadbalancer/app/hydra-public-alb/2f3d676a78693f43"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.hydra_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:823546862766:loadbalancer/net/hydra-kafka-nlb/01559512c7b149af",
            "arn_suffix": "net/hydra-kafka-nlb/01559512c7b149af",
            "dns_name": "hydra-kafka-nlb-01559512c7b149af.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:823546862766:loadbalancer/net/hydra-kafka-nlb/01559512c7b149af",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "hydra-kafka-nlb",
            "region": "us-east-1",
            "secondary_ips_auto_assigned_per_subnet": 0,
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01123c3a4441bd696"
              },
              {
                "subnet_id": "subnet-0a8d396799b5bb90d"
              }
            ],
            "subnets": [
              "subnet-01123c3a4441bd696",
              "subnet-0a8d396799b5bb90d"
            ],
            "vpc_id": "vpc-056fe79ae0e44e40d",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:823546862766:loadbalancer/net/hydra-kafka-nlb/01559512c7b149af"
          },
          "dependencies": [
            "aws_subnet.kafka_cluster",
            "aws_vpc.hydra_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:823546862766:listener/app/hydra-public-alb/2f3d676a78693f43/484b576660d8a892",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:823546862766:targetgroup/app-cluster-tg/dda1963f7715da8f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:823546862766:listener/app/hydra-public-alb/2f3d676a78693f43/484b576660d8a892",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:823546862766:loadbalancer/app/hydra-public-alb/2f3d676a78693f43",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:823546862766:listener/app/hydra-public-alb/2f3d676a78693f43/484b576660d8a892"
          },
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.app_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.hydra_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "kafka_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:823546862766:listener/net/hydra-kafka-nlb/01559512c7b149af/edbcb8c18d512eec",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:823546862766:targetgroup/kafka-cluster-tg/b97eee91f9fa21f9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:823546862766:listener/net/hydra-kafka-nlb/01559512c7b149af/edbcb8c18d512eec",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:823546862766:loadbalancer/net/hydra-kafka-nlb/01559512c7b149af",
            "mutual_authentication": [],
            "port": 9092,
            "protocol": "TCP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:823546862766:listener/net/hydra-kafka-nlb/01559512c7b149af/edbcb8c18d512eec"
          },
          "dependencies": [
            "aws_lb.nlb",
            "aws_lb_target_group.kafka_tg",
            "aws_subnet.kafka_cluster",
            "aws_vpc.hydra_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:823546862766:targetgroup/app-cluster-tg/dda1963f7715da8f",
            "arn_suffix": "targetgroup/app-cluster-tg/dda1963f7715da8f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:823546862766:targetgroup/app-cluster-tg/dda1963f7715da8f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-cluster-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-056fe79ae0e44e40d"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:823546862766:targetgroup/app-cluster-tg/dda1963f7715da8f"
          },
          "dependencies": [
            "aws_vpc.hydra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "kafka_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:823546862766:targetgroup/kafka-cluster-tg/b97eee91f9fa21f9",
            "arn_suffix": "targetgroup/kafka-cluster-tg/b97eee91f9fa21f9",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:823546862766:targetgroup/kafka-cluster-tg/b97eee91f9fa21f9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "kafka-cluster-tg",
            "port": 9092,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-056fe79ae0e44e40d"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:823546862766:targetgroup/kafka-cluster-tg/b97eee91f9fa21f9"
          },
          "dependencies": [
            "aws_vpc.hydra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:823546862766:targetgroup/app-cluster-tg/dda1963f7715da8f-2025112213531924600000000d",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:823546862766:targetgroup/app-cluster-tg/dda1963f7715da8f",
            "target_id": "i-0abb0512139aa27bd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.app_nodes",
            "aws_key_pair.kp",
            "aws_lb_target_group.app_tg",
            "aws_security_group.alb_sg",
            "aws_security_group.app_sg",
            "aws_subnet.private_app",
            "aws_vpc.hydra_vpc",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available",
            "tls_private_key.pk"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:823546862766:targetgroup/app-cluster-tg/dda1963f7715da8f-2025112213531998820000000f",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:823546862766:targetgroup/app-cluster-tg/dda1963f7715da8f",
            "target_id": "i-02026f1c31db3a05f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.app_nodes",
            "aws_key_pair.kp",
            "aws_lb_target_group.app_tg",
            "aws_security_group.alb_sg",
            "aws_security_group.app_sg",
            "aws_subnet.private_app",
            "aws_vpc.hydra_vpc",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available",
            "tls_private_key.pk"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:823546862766:targetgroup/app-cluster-tg/dda1963f7715da8f-2025112213531960040000000e",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:823546862766:targetgroup/app-cluster-tg/dda1963f7715da8f",
            "target_id": "i-0c746d26bc7c0f420"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.app_nodes",
            "aws_key_pair.kp",
            "aws_lb_target_group.app_tg",
            "aws_security_group.alb_sg",
            "aws_security_group.app_sg",
            "aws_subnet.private_app",
            "aws_vpc.hydra_vpc",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available",
            "tls_private_key.pk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "kafka_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:823546862766:targetgroup/kafka-cluster-tg/b97eee91f9fa21f9-20251122135320712600000011",
            "port": 9092,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:823546862766:targetgroup/kafka-cluster-tg/b97eee91f9fa21f9",
            "target_id": "i-0e59c331e9370c15a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.kafka_brokers",
            "aws_key_pair.kp",
            "aws_lb_target_group.kafka_tg",
            "aws_security_group.alb_sg",
            "aws_security_group.app_sg",
            "aws_security_group.kafka_sg",
            "aws_subnet.kafka_cluster",
            "aws_vpc.hydra_vpc",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available",
            "tls_private_key.pk"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:823546862766:targetgroup/kafka-cluster-tg/b97eee91f9fa21f9-20251122135321057300000012",
            "port": 9092,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:823546862766:targetgroup/kafka-cluster-tg/b97eee91f9fa21f9",
            "target_id": "i-0b6f6d65e37e78c69"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.kafka_brokers",
            "aws_key_pair.kp",
            "aws_lb_target_group.kafka_tg",
            "aws_security_group.alb_sg",
            "aws_security_group.app_sg",
            "aws_security_group.kafka_sg",
            "aws_subnet.kafka_cluster",
            "aws_vpc.hydra_vpc",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available",
            "tls_private_key.pk"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:823546862766:targetgroup/kafka-cluster-tg/b97eee91f9fa21f9-20251122135320390300000010",
            "port": 9092,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:823546862766:targetgroup/kafka-cluster-tg/b97eee91f9fa21f9",
            "target_id": "i-0c9d41edd8f0c6027"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.kafka_brokers",
            "aws_key_pair.kp",
            "aws_lb_target_group.kafka_tg",
            "aws_security_group.alb_sg",
            "aws_security_group.app_sg",
            "aws_security_group.kafka_sg",
            "aws_subnet.kafka_cluster",
            "aws_vpc.hydra_vpc",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available",
            "tls_private_key.pk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e83ef178242f021",
            "association_id": "eipassoc-044b1b7eacfca4dac",
            "connectivity_type": "public",
            "id": "nat-09a81dc5a3f179ac0",
            "network_interface_id": "eni-0bae43282c27927c7",
            "private_ip": "10.0.1.47",
            "public_ip": "98.88.120.217",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-015855f783b40cfd2",
            "tags": {
              "Name": "Project-Hydra-NAT-GW-A"
            },
            "tags_all": {
              "Name": "Project-Hydra-NAT-GW-A"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.hydra_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0367c4a8d4ee69761",
            "association_id": "eipassoc-05cd0f703ebc4a1ee",
            "connectivity_type": "public",
            "id": "nat-08c311c06aa960a91",
            "network_interface_id": "eni-0bbc63441db2f6ba6",
            "private_ip": "10.0.2.98",
            "public_ip": "35.170.217.172",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ca9c3c64673fe3bf",
            "tags": {
              "Name": "Project-Hydra-NAT-GW-B"
            },
            "tags_all": {
              "Name": "Project-Hydra-NAT-GW-B"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.hydra_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823546862766:route-table/rtb-02e5bf11d020dbd9a",
            "id": "rtb-02e5bf11d020dbd9a",
            "owner_id": "823546862766",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09a81dc5a3f179ac0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-RT-AZ-A"
            },
            "tags_all": {
              "Name": "Private-RT-AZ-A"
            },
            "timeouts": null,
            "vpc_id": "vpc-056fe79ae0e44e40d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "823546862766",
            "id": "rtb-02e5bf11d020dbd9a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public",
            "aws_vpc.hydra_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823546862766:route-table/rtb-035192a82bf0c3d8c",
            "id": "rtb-035192a82bf0c3d8c",
            "owner_id": "823546862766",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08c311c06aa960a91",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-RT-AZ-B"
            },
            "tags_all": {
              "Name": "Private-RT-AZ-B"
            },
            "timeouts": null,
            "vpc_id": "vpc-056fe79ae0e44e40d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "823546862766",
            "id": "rtb-035192a82bf0c3d8c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public",
            "aws_vpc.hydra_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823546862766:route-table/rtb-048b125bd6dbb9437",
            "id": "rtb-048b125bd6dbb9437",
            "owner_id": "823546862766",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05ffc29274cc6508a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb-public-igw"
            },
            "tags_all": {
              "Name": "rtb-public-igw"
            },
            "timeouts": null,
            "vpc_id": "vpc-056fe79ae0e44e40d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "823546862766",
            "id": "rtb-048b125bd6dbb9437",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.hydra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056a40e45ffee8466",
            "region": "us-east-1",
            "route_table_id": "rtb-02e5bf11d020dbd9a",
            "subnet_id": "subnet-083ec96c47337e917"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_app",
            "aws_subnet.public",
            "aws_vpc.hydra_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07bf8d47f69bddd45",
            "region": "us-east-1",
            "route_table_id": "rtb-035192a82bf0c3d8c",
            "subnet_id": "subnet-0c65a2c9c7b774cab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_app",
            "aws_subnet.public",
            "aws_vpc.hydra_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "data_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0313f0eb67d980d32",
            "region": "us-east-1",
            "route_table_id": "rtb-02e5bf11d020dbd9a",
            "subnet_id": "subnet-0be57af7e2eba83f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.data_db",
            "aws_subnet.public",
            "aws_vpc.hydra_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00456d449f92ebf0c",
            "region": "us-east-1",
            "route_table_id": "rtb-035192a82bf0c3d8c",
            "subnet_id": "subnet-0da1d422c3181b4c9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.data_db",
            "aws_subnet.public",
            "aws_vpc.hydra_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "kafka_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000fcef29553745af",
            "region": "us-east-1",
            "route_table_id": "rtb-02e5bf11d020dbd9a",
            "subnet_id": "subnet-01123c3a4441bd696"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.kafka_cluster",
            "aws_subnet.public",
            "aws_vpc.hydra_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ab4f8ed443fa6ae",
            "region": "us-east-1",
            "route_table_id": "rtb-035192a82bf0c3d8c",
            "subnet_id": "subnet-0a8d396799b5bb90d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.kafka_cluster",
            "aws_subnet.public",
            "aws_vpc.hydra_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b63cb8f393b9524f",
            "region": "us-east-1",
            "route_table_id": "rtb-048b125bd6dbb9437",
            "subnet_id": "subnet-015855f783b40cfd2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.hydra_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fdd0b47eb4574b21",
            "region": "us-east-1",
            "route_table_id": "rtb-048b125bd6dbb9437",
            "subnet_id": "subnet-0ca9c3c64673fe3bf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.hydra_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823546862766:security-group/sg-0a426cb847f1cecce",
            "description": "Allow Public HTTP Access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a426cb847f1cecce",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "823546862766",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-056fe79ae0e44e40d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "823546862766",
            "id": "sg-0a426cb847f1cecce",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.hydra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823546862766:security-group/sg-09525a89aeb4a316d",
            "description": "Security group for Application Containers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09525a89aeb4a316d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a426cb847f1cecce"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-cluster-sg",
            "name_prefix": "",
            "owner_id": "823546862766",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-056fe79ae0e44e40d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "823546862766",
            "id": "sg-09525a89aeb4a316d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.hydra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chat_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823546862766:security-group/sg-09067f21c28d1a64c",
            "description": "Security group for Chat Service RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09067f21c28d1a64c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09525a89aeb4a316d"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "chat-db-sg",
            "name_prefix": "",
            "owner_id": "823546862766",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "chat-db-sg"
            },
            "tags_all": {
              "Name": "chat-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-056fe79ae0e44e40d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "823546862766",
            "id": "sg-09067f21c28d1a64c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.app_sg",
            "aws_vpc.hydra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "doc_reader_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823546862766:security-group/sg-01a4857042789dabf",
            "description": "Security group for Document Reader Service RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01a4857042789dabf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09525a89aeb4a316d"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "doc-reader-db-sg",
            "name_prefix": "",
            "owner_id": "823546862766",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "doc-reader-db-sg"
            },
            "tags_all": {
              "Name": "doc-reader-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-056fe79ae0e44e40d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "823546862766",
            "id": "sg-01a4857042789dabf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.app_sg",
            "aws_vpc.hydra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kafka_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823546862766:security-group/sg-0e10eaa75fc5c07f0",
            "description": "Security group for Kafka and Zookeeper",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e10eaa75fc5c07f0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09525a89aeb4a316d"
                ],
                "self": false,
                "to_port": 9092
              }
            ],
            "name": "kafka-sg",
            "name_prefix": "",
            "owner_id": "823546862766",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-056fe79ae0e44e40d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "823546862766",
            "id": "sg-0e10eaa75fc5c07f0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.app_sg",
            "aws_vpc.hydra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "quiz_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823546862766:security-group/sg-0f85664f97a316c15",
            "description": "Security group for Quiz Service RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f85664f97a316c15",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09525a89aeb4a316d"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "quiz-db-sg",
            "name_prefix": "",
            "owner_id": "823546862766",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "quiz-db-sg"
            },
            "tags_all": {
              "Name": "quiz-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-056fe79ae0e44e40d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "823546862766",
            "id": "sg-0f85664f97a316c15",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.app_sg",
            "aws_vpc.hydra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823546862766:security-group/sg-0221861e9e437aa0b",
            "description": "Access to User Management DB",
            "egress": [],
            "id": "sg-0221861e9e437aa0b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09525a89aeb4a316d"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "hydra-rds-sg",
            "name_prefix": "",
            "owner_id": "823546862766",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-056fe79ae0e44e40d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "823546862766",
            "id": "sg-0221861e9e437aa0b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.app_sg",
            "aws_vpc.hydra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "stt_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823546862766:security-group/sg-037862d4ec736fe6e",
            "description": "Security group for STT Service RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037862d4ec736fe6e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09525a89aeb4a316d"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "stt-db-sg",
            "name_prefix": "",
            "owner_id": "823546862766",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stt-db-sg"
            },
            "tags_all": {
              "Name": "stt-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-056fe79ae0e44e40d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "823546862766",
            "id": "sg-037862d4ec736fe6e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.app_sg",
            "aws_vpc.hydra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823546862766:subnet/subnet-0be57af7e2eba83f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.60.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be57af7e2eba83f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "823546862766",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "data-db-a"
            },
            "tags_all": {
              "Name": "data-db-a"
            },
            "vpc_id": "vpc-056fe79ae0e44e40d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "823546862766",
            "id": "subnet-0be57af7e2eba83f7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.hydra_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823546862766:subnet/subnet-0da1d422c3181b4c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.61.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da1d422c3181b4c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "823546862766",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "data-db-b"
            },
            "tags_all": {
              "Name": "data-db-b"
            },
            "vpc_id": "vpc-056fe79ae0e44e40d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "823546862766",
            "id": "subnet-0da1d422c3181b4c9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.hydra_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kafka_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823546862766:subnet/subnet-01123c3a4441bd696",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.70.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01123c3a4441bd696",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "823546862766",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "kafka-cluster-a"
            },
            "tags_all": {
              "Name": "kafka-cluster-a"
            },
            "vpc_id": "vpc-056fe79ae0e44e40d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "823546862766",
            "id": "subnet-01123c3a4441bd696",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.hydra_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823546862766:subnet/subnet-0a8d396799b5bb90d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.71.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8d396799b5bb90d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "823546862766",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "kafka-cluster-b"
            },
            "tags_all": {
              "Name": "kafka-cluster-b"
            },
            "vpc_id": "vpc-056fe79ae0e44e40d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "823546862766",
            "id": "subnet-0a8d396799b5bb90d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.hydra_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823546862766:subnet/subnet-083ec96c47337e917",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083ec96c47337e917",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "823546862766",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-app-a"
            },
            "tags_all": {
              "Name": "private-app-a"
            },
            "vpc_id": "vpc-056fe79ae0e44e40d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "823546862766",
            "id": "subnet-083ec96c47337e917",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.hydra_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823546862766:subnet/subnet-0c65a2c9c7b774cab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.51.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c65a2c9c7b774cab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "823546862766",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-app-b"
            },
            "tags_all": {
              "Name": "private-app-b"
            },
            "vpc_id": "vpc-056fe79ae0e44e40d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "823546862766",
            "id": "subnet-0c65a2c9c7b774cab",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.hydra_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823546862766:subnet/subnet-015855f783b40cfd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015855f783b40cfd2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "823546862766",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Project-Hydra-VPC-subnet-public1-us-east-1a"
            },
            "tags_all": {
              "Name": "Project-Hydra-VPC-subnet-public1-us-east-1a"
            },
            "vpc_id": "vpc-056fe79ae0e44e40d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "823546862766",
            "id": "subnet-015855f783b40cfd2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.hydra_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823546862766:subnet/subnet-0ca9c3c64673fe3bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca9c3c64673fe3bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "823546862766",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Project-Hydra-VPC-subnet-public2-us-east-1b"
            },
            "tags_all": {
              "Name": "Project-Hydra-VPC-subnet-public2-us-east-1b"
            },
            "vpc_id": "vpc-056fe79ae0e44e40d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "823546862766",
            "id": "subnet-0ca9c3c64673fe3bf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.hydra_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hydra_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823546862766:vpc/vpc-056fe79ae0e44e40d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0920b7b983bd866fa",
            "default_route_table_id": "rtb-024065a6e1e77313a",
            "default_security_group_id": "sg-0f7430a447690d045",
            "dhcp_options_id": "dopt-07a94519c199e6fd4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-056fe79ae0e44e40d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-024065a6e1e77313a",
            "owner_id": "823546862766",
            "region": "us-east-1",
            "tags": {
              "Name": "Project-Hydra-VPC"
            },
            "tags_all": {
              "Name": "Project-Hydra-VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "823546862766",
            "id": "vpc-056fe79ae0e44e40d",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}